[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/meshes/env_env_plate_holder.tres" type="ArrayMesh" id=1]
[ext_resource path="res://scenes/appliances/plates/plates.gd" type="Script" id=2]
[ext_resource path="res://assets/meshes/env_app_plate_lg.tres" type="ArrayMesh" id=3]

[sub_resource type="CylinderShape" id=1]
height = 0.4
radius = 0.3

[node name="Plates" type="StaticBody"]
script = ExtResource( 2 )

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.28, 0 )
shape = SubResource( 1 )

[node name="Position3D" type="Position3D" parent="."]
transform = Transform( -1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 1, 0, 0 )

[node name="MeshInstance" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.1, 0 )
mesh = ExtResource( 1 )

[node name="Plate1" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.2, 0 )
mesh = ExtResource( 3 )

[node name="Plate2" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.25, 0 )
mesh = ExtResource( 3 )

[node name="Plate3" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.3, 0 )
mesh = ExtResource( 3 )
